--- a/index.html
+++ b/index.html
@@ -18,16 +18,20 @@
   <!-- Surat ucapan (hidden dulu) -->
   <div id="surat" class="hidden">
     <img src="https://i.pinimg.com/736x/ae/1d/ef/ae1def1f18165a7f977ff2f9e8179142.jpg" alt="HBD!" class="letter-photo" />
-    <h2>🎂 Selamat Ulang Tahun 🎂</h2>
+    <h2>Selamat Ulang Tahun 🎂</h2>
     <p>
       Today is the day, selamat ya buat yang ulang tahun hari ini! 🥳 Aku kaget beneran kamu udah nyentuh umur 16 tahun ini hehe...
       But yeah, really, Happy Birthday for you 🎉🥳. Semoga hidup kamu berjalan dengan lancar tanpa hambatan ya! 🎀
-      Let's play along w/ me sometimes, it'll be better to chill. Just so you know, my feelings... are still the same as yesterday so, if
-      you owe me a real confessions 😈 (just kidding :D) even if i still had feelings for, i dont want to reach you any longer.
-      kalo seandainya kamu nolak my confession, it's okay, i just want you to live normally even if it's better without me
+      Let's play along w/ me sometimes, it'll be better to chill. Just so you know, my feelings... are still the same as yesterday so,
+      you owe me a real confessions 😈 (just kidding :D) even if i still had feelings for, i js want you to live happily
     </p>
     <p>
-      One last time - Happy Birthday on this Beautiful 18 Oct 2025 🥳
+      I'm really proud of you! maaf ya kalo misalnya aku bikin kamu risih pas di wa hehehe.
+      Aku penasaran, gimana jadinya kalo aku dateng kerumah kamu buat ngasih hadiah ultah, tapi
+      takut dikira aneh aneh sama ortu kamu aduhai.
+    </p>
+    <p>
+      for the last time - Happy Birthday on this Beautiful 18 Oct 2025 🥳
     </p>
     <p>
       ~ Najmi
